--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
         <section class="credits">
             <h2>Credits</h2>
-            <p>This website was created by Cameron Richardson, extended using GitHub coilot</p>
+            <p>This website was created by Cameron Richardson, extended using GitHub Copilot.</p>
         </section>
     </main>
     <script src="p5.min.js"></script>
