--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <main>
         <section class="projects">
             <div class="project-card">
-                <a href="Interactive-Fiction/index.html">
+                <a href="Fiction/index.html">
                     <h2>Interactive Fiction</h2>
                     <p>Interactive fiction using Inform 7, extended using ChatGPT.</p>
                 </a>
             </div>
             <div class="project-card">
-                <a href="P5-Interactive-Game/index.html">
+                <a href="P5/index.html">
                     <h2>P5 Interactive Game</h2>
                     <p>Interactive P5 game, extended using ChatGPT and CoPilot.</p>
                 </a>
