--- a/P5/index.html
+++ b/P5/index.html
@@ -33,7 +33,7 @@
         <div class="project-info">
             <img src="room_background.png" alt="Game Background">
             <h2>Interactive Game using P5.js</h2>
-            <p>Experience an interactive game created using P5.js. Extended using ChatGPT and CoPilot.</p>
+            <p>Experience an interactive game created using P5.js libraries. Extended using ChatGPT and GitHub Copilot.</p>
             <p>Source file: <a href="mySketch.js">mySketch.js</a></p>
             <p>Other info: <a href="https://github.com/yourusername/GAICC-Portfolio">GitHub Repository</a></p>
         </div>
